# postgres-pm

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  env.fish  loader.lgt  main.c  settings-build.lgt  tester.lgt
cmake/: Logtalk.cmake  SWIprolog.cmake
pgpm/: build.lgt  config.lgt  env.lgt  extended_relations.lgt  fs.lgt  git.lgt  git_explicit_revision_package.lgt  git_remote.lgt  git_rev.lgt  git_tagged_revision_package.lgt  inferences.lgt  inherit_hook.lgt  loader.lgt  make_builder.lgt  metadata.lgt  origin.lgt  package.lgt  path.lgt  pgpm.lgt  postgres.lgt  requirement.lgt  selectors.lgt  tagged.lgt  version.lgt
pgpm/requirements/: c_compiler.lgt  loader.lgt  make.lgt  pkgconfig.lgt  when.lgt
tests/: env.lgt  fs.lgt  git.lgt  git_remote.lgt  inference.lgt  version.lgt
tests/fixtures/makefile_c_package/: Makefile  test.control
tests/fixtures/makefile_package/: Makefile  test.control
tests/fixtures/pgxn_package/: META.json
